deployments_v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-v1
  namespace: landing-page 
  labels:
    app: landing-page
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
        version: v1
    spec:
      containers:
      - name: landing-page
        image: nvpidstoob/diplomarbeit:landingpage
        resources: 
          limits:
             memory: "500Mi"
             cpu: "100m"
          requests:
             memory: "100Mi"
             cpu: "50m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerregistrykey

---



apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-page-v1
  namespace: shopping-page 
  labels:
    app: shopping-page
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-page
  template:
    metadata:
      labels:
        app: shopping-page
        version: v1
    spec:
      containers:
      - name: shopping-page
        image: nvpidstoob/diplomarbeit:shoppingpage
         resources: 
          limits:
             memory: "500Mi"
             cpu: "100m"
          requests:
             memory: "100Mi"
             cpu: "50m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerregistrykey

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch-page-v1
  namespace: watch-page 
  labels:
    app: watch-page
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watch-page
  template:
    metadata:
      labels:
        app: watch-page
        version: v1
    spec:
      containers:
      - name: watch-page
        image: nvpidstoob/diplomarbeit:watchpage
         resources: 
          limits:
             memory: "500Mi"
             cpu: "100m"
          requests:
             memory: "100Mi"
             cpu: "50m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerregistrykey
