deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page-v1
  namespace: landing-page 
  labels:
    app: landing-page
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: landing-page
  template:
    metadata:
      labels:
        app: landing-page
        version: v1
    spec:
      containers:
      - name: landing-page
        image: nvpidstoob/diplomarbeit:landingpage
        resources: 
          limits:
             memory: "500Mi"
             cpu: "100m"
          requests:
             memory: "100Mi"
             cpu: "50m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerregistrykey

---



apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-page-v1
  namespace: shopping-page 
  labels:
    app: shopping-page
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-page
  template:
    metadata:
      labels:
        app: shopping-page
        version: v1
    spec:
      containers:
      - name: shopping-page
        image: nvpidstoob/diplomarbeit:shoppingpage
         resources: 
          limits:
             memory: "500Mi"
             cpu: "100m"
          requests:
             memory: "100Mi"
             cpu: "50m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerregistrykey

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch-page-v1
  namespace: watch-page 
  labels:
    app: watch-page
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watch-page
  template:
    metadata:
      labels:
        app: watch-page
        version: v1
    spec:
      containers:
      - name: watch-page
        image: nvpidstoob/diplomarbeit:watchpage
         resources: 
          limits:
             memory: "500Mi"
             cpu: "100m"
          requests:
             memory: "100Mi"
             cpu: "50m"
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerregistrykey

---

kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: watch-page-service
  namespace: watch-page
  labels:
    kiali_wizard: weighted_routing
spec:
  host: watch-page-service
  subsets:
    - labels:
        version: v1
      name: v1
  
---

kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: landing-page-service
  namespace: landing-page
  labels:
    kiali_wizard: weighted_routing
spec:
  host: landing-page-service
  subsets:
    - labels:
        version: v1
      name: v1

---

kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: shopping-page-service
  namespace: shopping-page
  labels:
    kiali_wizard: weighted_routing
spec:
  host: shopping-page-service
  subsets:
    - labels:
        version: v1
      name: v1

---

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: landing-page-service
  namespace: landing-page
  labels:
    kiali_wizard: weighted_routing
    app: landing-page
spec:
  hosts:
  - "www.jush.it"
  gateways:
  - page-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: landing-page-service
        subset: v1
      weight: 100

---

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: shopping-page-service
  namespace: shopping-page
  labels:
    kiali_wizard: weighted_routing
    app: shopping-page
spec:
  hosts:
  - "shopping.jush.it"
  gateways:
  - page-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: shopping-page-service
        subset: v1
      weight: 100

---

kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: watch-page-service
  namespace: watch-page
  labels:
    kiali_wizard: weighted_routing
    app: watch-page
spec:
  hosts:
  - "stream.jush.it"
  gateways:
  - page-gateway.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        host: watch-page-service
        subset: v1
      weight: 100
